--- a/style.css
+++ b/style.css
@@ -117,13 +117,14 @@ header {
     position: absolute;
     background-color: #fff;
     width: 160px;
-    max-height: 200px; /* Set a maximum height for the dropdown */
+    max-height: 190px; /* Set a maximum height for the dropdown */
     -webkit-overflow-y: auto; /* Enable vertical scrolling for Chrome */
     overflow-y: auto; /* Enable vertical scrolling for other browsers */
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
-    top: 100%; /* Position dropdown content below the button */
-    left: 0;
+    top: calc(100%); /* Adjust the position to be closer to the button */
+    left: 50%; /* Center the dropdown horizontally */
+    transform: translateX(-50%); /* Center the dropdown horizontally */
 }
 
 .dropdown-content a {
@@ -142,7 +143,6 @@ header {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
 
 .option-btn {
     background-color: #AE0000;
